--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,12 @@
     <header>
         <div class="color_head">
             <h1 class="title-box3">Yurim Maeng</h1>
-            <div class="one" id="about"> About</div>
-            <div class="one" id="portfolio"> Portfolio</div>
-            <div class="one" id="contact"> Contact</div>
+            <div class="one" id="about">
+                <a href="file:///Users/maeng-yurim/Desktop/repo/index.html">About</a></div>
+            <div class="one" id="portfolio">
+                <a href="file:///Users/maeng-yurim/Desktop/repo/portfolio.html">Portfolio</a></div>
+            <div class="one" id="contact">
+                <a href="file:///Users/maeng-yurim/Desktop/repo/contact.html">Contact</a></div>
         </div>
     </header>
 
@@ -25,18 +28,18 @@
     <div class="content">
         <h2>Contact</h2>
         <form>
-                <div class="contact_context">
-                    Contact:<br>
-                    <input type="text" name="firstname" size="110">
-                    <br>
-                    Email:<br>
-                    <input type="text" name="text" size="110">
-                    <br>
-                </div>
-                Message: <br>
-                <input type="text" class="textbox" name="message" size="110">
+            <div class="contact_context">
+                Contact:<br>
+                <input type="text" name="firstname" size="110">
                 <br>
-            
+                Email:<br>
+                <input type="text" name="text" size="110">
+                <br>
+            </div>
+            Message: <br>
+            <input type="text" class="textbox" name="message" size="110">
+            <br>
+
         </form>
         </form>
     </div>
