--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
     <header>
         <div class="color_head">
             <h1 class="title-box1">Yurim Maeng</h1>
-            <div class="one" id="about"> About</div>
-            <div class="one" id="portfolio"> Portfolio</div>
-            <div class="one" id="contact"> Contact</div>
+            <div class="one" id="about">
+                <a href ="file:///Users/maeng-yurim/Desktop/repo/index.html">About</a></div>
+            <div class="one" id="portfolio">
+                <a href ="file:///Users/maeng-yurim/Desktop/repo/portfolio.html">Portfolio</a></div>
+            <div class="one" id="contact">
+            <a href ="file:///Users/maeng-yurim/Desktop/repo/contact.html">Contact</a></div>
         </div>
+
+        
     </header>
 
     <div class="content1">
